1.增加了 我的页面 1.1增加了 增加了个人信息页面 1.2增加了 增加了收藏页面 2.增加了 商城页面 3.增加了 设置页面

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     <string name="mall">商城</string>
     <string name="mine">我的</string>
     <string name="points_mall">积分商城</string>
+    <string name="collection">收藏</string>
+    <string name="RecentlyViewed">最近浏览</string>
+    <string name="VoucherPackage">券包</string>
 </resources>
